updated more files

--- a/app/templates/create_property.html
+++ b/app/templates/create_property.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Create Property</h1>
-    <form method="POST" action="create_property.html" enctype="multipart/form-data">
+    <form method="POST" action="/properties/create" enctype="multipart/form-data">
         <!-- Title -->
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required><br>
