--- a/app/templates/property_details.html
+++ b/app/templates/property_details.html
@@ -9,15 +9,15 @@
 <body>
     <h1>Property Details</h1>
     <div>
-        <h2>{{ property.title }}</h2>
-        <p><strong>Bedrooms:</strong> {{ property.bedrooms }}</p>
-        <p><strong>Bathrooms:</strong> {{ property.bathrooms }}</p>
-        <p><strong>Location:</strong> {{ property.location }}</p>
-        <p><strong>Price:</strong> {{ property.price }}</p>
-        <p><strong>Type:</strong> {{ property.type }}</p>
-        <p><strong>Description:</strong> {{ property.description }}</p>
-        {% if property.photo %}
-            <img src="{{ url_for('static', filename='photos/' + property.photo) }}" alt="Property Photo">
+        <h2>{{ title }}</h2>
+        <p><strong>Bedrooms:</strong> {{ bedrooms }}</p>
+        <p><strong>Bathrooms:</strong> {{ bathrooms }}</p>
+        <p><strong>Location:</strong> {{ location }}</p>
+        <p><strong>Price:</strong> {{price }}</p>
+        <p><strong>Type:</strong> {{ prop_type }}</p>
+        <p><strong>Description:</strong> {{ description }}</p>
+        {% if photo %}
+        <img src="data:image/png;base64,{{ photo }}" alt="Property Photo">
         {% else %}
             <p>No photo available</p>
         {% endif %}
