--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -14,10 +14,10 @@
           <a class="nav-link" href="{{ url_for('about') }}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('create_prop') }}">Create Property</a>
+          <a class="nav-link" href="{{ url_for('create_prop') }}">New Property</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('prop_list') }}">List Properties</a>
+          <a class="nav-link" href="{{ url_for('prop_list') }}">Properties</a>
         </li>
         
       </ul>
