--- a/app/templates/property_list.html
+++ b/app/templates/property_list.html
@@ -13,7 +13,7 @@
         
         <li>
             {% if property[6] %}
-                <img src="{{ url_for('static', filename=property[8]) }}" alt="Property Photo">
+                <img src="{{ url_for('static', filename='photos/'+property[8]) }}" alt="Property Photo">
             {% else %}
                 <p>No photo available</p>
             {% endif %}
